# jaxlogit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: documentation.txt  documentation.yml  linting.yml  linting_and_coverage.yml  release.yml  system_tests.yml  unit_tests.yml
docs/: api.rst  conf.py  examples.rst  index.rst  markdown_test.md
docs/example_notebooks/: batching_example.py  mixed_logit_comparison_example.py  mixed_logit_correlated_example.py  mixed_logit_model_xlogit_example.py  scikit_cross_validation.py  swissmetro_biogeme.py
docs/graphs/: comparison_graphs_memory.ipynb  comparison_graphs_timing.ipynb
examples/: b09_nested.html  batching_example.ipynb  comparison_data_fit.json  comparison_graphs.ipynb  mixed_logit_comparison_example.ipynb  mixed_logit_comparison_example_old.py  mixed_logit_comparison_example_swissmetro.ipynb  mixed_logit_correlated_example.ipynb  mixed_logit_model_xlogit_example.ipynb  mixed_logit_predict_example.ipynb  mixed_logit_predict_example_clean.ipynb  playing_nested_logit_biogeme.ipynb  playing_nested_logit_jaxlogit.ipynb  swissmetro_biogeme.ipynb  swissmetro_biogeme.py
examples/graphs/: comparison_data_fit.json  comparison_data_memory.json  comparison_data_timing.json  comparison_data_timing_artificial.json  comparison_graphs_memory.ipynb  comparison_graphs_timing.ipynb
jaxlogit/: MixedLogitEncoder.py  _choice_model.py  _config_data.py  _optimize.py  _variables.py  draws.py  mixed_logit.py  nested_logit.py  scikit_wrapper.py  utils.py
tests/: correlated_example_fix_params_output.pkl  simple_data_output.pkl  test__choice_model.py  test__optimize.py  test__variables.py  test_jaxlogit.py  test_mixed_logit.py  test_utils.py
tests/system_tests/: correlated_example_error_components_output.json  correlated_example_error_components_output.pkl  correlated_example_estimate_params_output.json  correlated_example_estimate_params_output.pkl  correlated_example_fix_params_output.json  correlated_example_fix_params_output.pkl  test_system.py
tests/system_tests/test_data/: batching_example_output.json  correlated_example_error_components_output.json  correlated_example_estimate_params_output.json  predict_prob_output.json  test_json.json
tests/unit_tests/: simple_data_output.json  test__choice_model.py  test__optimize.py  test__variables.py  test_jaxlogit.py  test_mixed_logit.py  test_nesting.py
tests/unit_tests/test_data/: optimize_minimize_output.json
